# frameguard

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  airflow.html  genindex.html  index.html  kedro.html  objects.inv  pipelines.html  pyproject.toml  quickstart.html  release-please-config.json  search.html  searchindex.js  types.html
.doctrees/: airflow.doctree  index.doctree  kedro.doctree  pipelines.doctree  quickstart.doctree  types.doctree
.doctrees/__intersphinx_cache__/: pyspark_objects.inv
.doctrees/api/: dataset.doctree  enforcement.doctree  exceptions.doctree  history.doctree  schemas.doctree
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/dfguard/_base/: exceptions.html
_sources/: airflow.rst.txt  index.rst.txt  pipelines.rst.txt  quickstart.rst.txt  types.rst.txt
_sources/api/: dataset.rst.txt  enforcement.rst.txt  exceptions.rst.txt  history.rst.txt  index.rst.txt  schemas.rst.txt
api/: dataset.html  enforcement.html  exceptions.html  history.html  index.html  schemas.html
api/pyspark/: dataset.html  decorators.html  enforcement.html  exceptions.html  history.html  index.html  schemas.html
dfguard/: __init__.py  _nullable.py
dfguard/_base/: __init__.py  _alias.py  _col_names.py  enforcement.py  exceptions.py  history.py
dfguard/pandas/: __init__.py  _enforcement.py  _inference.py  dataset.py  exceptions.py  history.py  schema.py  types.py
dfguard/polars/: __init__.py  _enforcement.py  _inference.py  _nullable.py  dataset.py  exceptions.py  history.py  schema.py  types.py
dfguard/pyspark/: __init__.py  _enforcement.py  _inference.py  _nullable.py  coercion.py  dataset.py  decorators.py  exceptions.py  history.py  schema.py  types.py
docs/: airflow.rst  conf.py  index.rst  kedro.rst  pipelines.rst  quickstart.rst  requirements.txt
docs/api/: dataset.rst  index.rst
docs/api/pyspark/: dataset.rst  (+5 more)
examples/airflow/: README.md  requirements.txt
examples/benchmarks/: benchmark.py  pipeline.py
examples/kedro/: README.md  pyproject.toml  requirements.txt
examples/notebooks/: pandas_quickstart.ipynb  polars_quickstart.ipynb  pyspark_quickstart.ipynb
frameguard/pyspark/: _enforcement.py  dataset.py  schema.py
latest/: .buildinfo  airflow.html  genindex.html  index.html  kedro.html  pipelines.html  quickstart.html  search.html  searchindex.js  types.html
latest/.doctrees/: index.doctree  quickstart.doctree
latest/_modules/: index.html
latest/_sources/: quickstart.rst.txt
latest/api/: dataset.html  enforcement.html  exceptions.html  history.html  schemas.html
tests/pandas/: conftest.py  test_alias.py  test_dataset.py  test_enforcement.py  test_history.py  test_pyarrow.py  test_schema.py  test_types.py
tests/polars/: conftest.py  test_dataset.py  test_enforcement.py  test_history.py  test_schema.py  test_types.py
tests/pyspark/: conftest.py  test_coercion.py  test_complex_types.py  test_dataset.py  test_decorators.py  test_enforcement.py  test_history.py  test_pipeline.py  test_schema.py  test_schema_annotation.py  test_types.py
(+49 files in other folders)
