[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfguard"
version = "0.2.4"
description = "Runtime schema enforcement for Python DataFrames"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Nitrajen" }]
dependencies = []

[project.optional-dependencies]
pyspark = ["pyspark>=3.3.0"]
pandas  = ["pandas>=1.5.0"]
polars  = ["polars>=0.20.0"]
all     = ["dfguard[pyspark,pandas,polars]"]
dev     = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pyspark>=3.3.0",
]

[project.urls]
Homepage      = "https://github.com/nitrajen/dfguard"
Repository    = "https://github.com/nitrajen/dfguard"
Documentation = "https://nitrajen.github.io/dfguard/"

[tool.hatch.build.targets.wheel]
packages = ["dfguard"]

[tool.hatch.build.targets.wheel.force-include]
"dfguard/py.typed" = "dfguard/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# UP007/UP045 (Optional[X] -> X | None) are suppressed where PySpark DataType instances
# are used as annotations: DataType doesn't implement __or__, so Optional[X] is required.
[tool.ruff.lint.per-file-ignores]
"dfguard/pyspark/schema.py" = ["UP007", "UP045"]
"tests/**/*.py"                = ["UP007", "UP045"]

[tool.mypy]
python_version  = "3.10"
strict          = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
